--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
 	],
 
 	"require": {
-		"php": ">7.1"
+		"php": ">7.4"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "8.*"
+		"phpunit/phpunit": "9.*",
+		"phpstan/phpstan": ">=0.12.88"
 	},
 
 	"autoload": {
@@ -19,7 +20,7 @@
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"Gt\\ProtectedGlobal\\Test\\": "./test/unit"
+			"Gt\\ProtectedGlobal\\Test\\": "./test/phpunit"
 		}
 	}
 }
