--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
 		"php": ">7.4"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "9.*",
-		"phpstan/phpstan": ">=0.12.88"
+		"phpstan/phpstan": "v1.8.0",
+		"phpunit/phpunit": "v9.5.21"
 	},
 
 	"autoload": {
