--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
 		"php": ">7.4"
 	},
 	"require-dev": {
-		"phpstan/phpstan": "^v1.8",
-		"phpunit/phpunit": "^v9.5"
+		"phpstan/phpstan": "^1.10",
+		"phpunit/phpunit": "^10.1"
 	},
 
 	"autoload": {
